<!--Mathew Anderson, n01436706 -->
<resources>
    <string name="app_name">MathewLab8</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="name">Mathew Anderson</string>
    <string name="email">n01436706@humber.ca</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="dialog_message">Do you want to exit the app?</string>
    <string name="dialog_title">Mathew Anderson</string>
    <string name="nameid">Mathew Anderson n01436706</string>
    <string name="button">Button</string>
    <string name="access_photos">Access Photos</string>
    <string name="profile">Profile</string>
    <string name="checkbox">CheckBox</string>
    <string name="profileemail">Email:</string>
    <string name="id">id:</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_id">Enter ID</string>
    <string name="id_must_be_at_least_6_digits">ID must be at least 6 digits</string>
    <string name="invalid_email">Invalid email</string>
    <string name="firstname">Mathew</string>
    <string name="lastname">Anderson</string>
    <string name="ischecked">isChecked?</string>
    <string name="iftrue">True</string>
    <string name="iffalse">False</string>
    <string name="togglebutton">ToggleButton</string>
</resources>