<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".AboutFragment">
    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/mathewTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="64dp"
        android:text="@string/firstname"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:rotation="45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mathewTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="128dp"
        android:text="@string/lastname"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:rotation="-45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matCheckBoxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="216dp"
        android:text="@string/ischecked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matEmailTextViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/profileemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matCheckBoxLabel" />

    <TextView
        android:id="@+id/matIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="39dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matEmailTextViewLabel" />

    <TextView
        android:id="@+id/matBoxCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="214dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/matCheckBoxLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matEmailCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="281dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/matEmailTextViewLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matIDCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="341dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/matIDLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/matToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="223dp"
        android:layout_marginTop="404dp"
        android:text="@string/togglebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathewTextView3" />
</androidx.constraintlayout.widget.ConstraintLayout>